--- a/BaseForCode/app/build.gradle
+++ b/BaseForCode/app/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:'+rootProject.supportVersion
-    implementation 'com.android.support:design:'+rootProject.supportVersion
+//    implementation 'com.android.support:design:'+rootProject.supportVersion
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
