--- a/BaseForCode/uilibrary/build.gradle
+++ b/BaseForCode/uilibrary/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:' + rootProject.supportVersion
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api 'com.android.support:design:'+rootProject.supportVersion
+
+    api 'com.alibaba.android:tangram:3.1.2@aar'
+
+    api('me.drakeet.multitype:multitype:' + rootProject.multitype, {
+        exclude group: 'com.android.support'
+    })
+
 }
